--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,12 +28,23 @@ jobs:
       - name: Install linters
         run: pip install flake8 autopep8 autoflake
 
+      # ── Get EXACT PR-changed files via GitHub API ──────────────
       - name: Get changed Python files
         id: changed
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git fetch origin ${{ github.base_ref }}
-          ALL_FILES=$(git diff --name-only origin/${{ github.base_ref }}...HEAD -- '*.py' \
+          # Fetch exact file list from the PR (not git diff)
+          ALL_FILES=$(curl -s \
+            -H "Authorization: token $GH_TOKEN" \
+            -H "Accept: application/vnd.github+json" \
+            "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files?per_page=100" \
+            | jq -r '.[].filename' \
+            | grep '\.py$' \
             | grep -E '^(community|official|templates)/' || true)
+
+          echo "📋 PR changed Python files:"
+          echo "$ALL_FILES"
 
           if [ -z "$ALL_FILES" ]; then
             echo "skip=true" >> $GITHUB_OUTPUT
@@ -45,6 +56,10 @@ jobs:
           LINT_FILES=""
 
           while IFS= read -r file; do
+            # Skip files that no longer exist (deleted in PR)
+            if [ ! -f "$file" ]; then
+              continue
+            fi
             if [[ "$(basename "$file")" == "__init__.py" ]]; then
               INIT_FILES="$INIT_FILES $file"
             else
@@ -109,13 +124,19 @@ jobs:
             echo "has_fixes=true" >> $GITHUB_OUTPUT
           fi
 
+      # ── Commit ONLY the specific PR files ──────────────────────
       - name: Commit auto-format fixes
         if: steps.autoformat.outputs.has_fixes == 'true'
         continue-on-error: true
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add '**/main.py'
+
+          # Stage ONLY the exact files from this PR — nothing else
+          for file in ${{ steps.changed.outputs.lint_files }}; do
+            git add "$file"
+          done
+
           git commit -m "style: auto-format Python files with autoflake + autopep8"
           git push
 
@@ -163,7 +184,6 @@ jobs:
             let body = '<!-- lint-check-result -->\n';
             body += '## 🔍 Lint Results\n\n';
 
-            // ── Auto-format notice ──
             if (autoFixed) {
               body += '### 🔧 Auto-formatted\n';
               body += 'Some files were automatically cleaned and formatted with `autoflake` + `autopep8` and committed.\n';
@@ -172,7 +192,6 @@ jobs:
               body += '- ✅ **PEP8 formatting applied** (autopep8)\n\n';
             }
 
-            // ── __init__.py check ──
             if (initFiles) {
               if (initErr) {
                 body += '### ❌ `__init__.py` Must Be Empty\n\n';
@@ -184,7 +203,6 @@ jobs:
               }
             }
 
-            // ── Flake8 ──
             if (lintFiles) {
               body += `**Files linted:** \`${lintFiles}\`\n\n`;
               if (flake8Err) {
@@ -196,14 +214,12 @@ jobs:
               body += '_No non-init Python files to lint._\n\n';
             }
 
-            // ── Footer ──
             if (allPassed) {
               body += '> ✅ All checks passed!';
             } else {
               body += '> Fix the remaining issues and push again. The lint will re-run automatically.';
             }
 
-            // ── Upsert comment ──
             const { data: comments } = await github.rest.issues.listComments({
               owner: context.repo.owner,
               repo: context.repo.repo,
